tests/baselines/reference/moduleAssignmentCompat4.errors.txt
moduleAssignmentCompat4.ts(12,8): error TS2709: Cannot use namespace 'A' as a type.
moduleAssignmentCompat4.ts(13,8): error TS2709: Cannot use namespace 'B' as a type.


==== moduleAssignmentCompat4.ts (2 errors) ====
    namespace A {
       export namespace M {
            class C { }
        }
    }
    namespace B {
        export namespace M {
            export class D { }
        }
    }
    
    var a: A;
           ~
!!! error TS2709: Cannot use namespace 'A' as a type.
    var b: B;
           ~
!!! error TS2709: Cannot use namespace 'B' as a type.
    
    a = b;
    b = a; // error